# dcshci-nlp-server

./: .gitignore  LICENSE  README.md  pyproject.toml
assets/models/asante-twi/: config.json
src/: app.py  config.py  main.py  schemas.py
src/models/: __init__.py
src/routes/: __init__.py  tts.py
src/services/: __init__.py
src/services/tts/: __init__.py  engine.py  t2s.py  threadsafe_generators.py
